ex/rest-server-ingress.yaml
# rest-server-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/http01-ingress-class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: rest-server-service
                port:
                  number: 80
