ex/rest-server-ingressroute.yaml
# rest-server-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "${DOMAIN_NAME}"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: rest-server-service
            port:
              number: 8080
